--- a/grid/01-grid-layout-1/style.css
+++ b/grid/01-grid-layout-1/style.css
@@ -8,6 +8,10 @@ body, html {
   height: 100%;
   padding: 16px;
   box-sizing: border-box;
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  grid-template-rows: 1fr 1fr 5fr 1fr;
+  gap: 15px;
 }
 
 .container div {
@@ -21,18 +25,24 @@ body, html {
 
 .header {
   background-color: #FFDE22;
+  grid-column: 1 / -1;
 }
 
 .sidebar {
   background-color: #FF7755;
+  grid-column: 1 / 2;
+  grid-row: 2 / 4;
 }
 
 .nav {
   background-color: #00DDFF;
+  grid-column: 2 / 3;
 }
 
 .article {
   background-color: #bccbde;
+  grid-column: 2 / 3;
+  grid-row: 3;
 }
 
 .article p {
@@ -44,4 +54,17 @@ body, html {
 
 .footer {
   background-color: #393f4d;
+  grid-column: 1 / -1;
 }
+
+
+
+
+/* - The gap is 15px
+- The grid has two columns
+- The grid has four rows
+- The second column is three times larger than the first
+- The third row is five times larger than the others
+- The header and footer elements span across both columns
+- The sidebar element only spans across the first column
+- The nav and article elements span across the second column */
