--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -1,10 +1,37 @@
+/* ### Self Check
+- The container element has two columns
+- The container's second column is 4 times larger than the first column
+- The container element has a gap of 4px
+- The header element has two columns
+- The `ul` inside the menu element contains another grid
+- The `ul` inside the nav element contains another grid
+- The sidebar element has a gap of 50px
+
+- The text elements in the sidebar are centered with grid
+- The article element should set grid columns using `repeat` along with the `auto-fit` and `minmax` properties
+- The article columns should have a minimum value of 250px and a maximum of 1fr unit
+- The article element has a gap of 15px
+- The card elements inside the article container have a height of 200px
+- The header and footer span across both columns
+- The sidebar only spans across the first column
+- The nav and article elements only span across the second column */
+
+
+
 * {
   margin: 0;
   padding: 0;
+  list-style: none;
 }
 
 .container {
   text-align: center;
+  /*  */
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  grid-template-rows: repeat(6, auto);
+  gap: 4px;
+
 }
 
 .container div {
@@ -17,24 +44,47 @@
 
 .header {
   background-color: #393f4d;
+  /*  */
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  grid-column: 1 / -1;
+
+
 }
 
 .logo {
+  /*  */
+  justify-self: start;
+  align-self: center;
 }
 
 .menu {
+  /*  */
+  align-self: center;
 }
 
 .menu ul {
+  /*  */
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
 }
 
 .menu ul,
 .menu li {
+  /*  */
+  display: grid;
   font-size: 16px;
 }
 
 .sidebar {
   background-color: #FF7755;
+  gap: 50px;
+  /*  */
+  display: grid;
+  grid-row: 2 / 4;
+  gap: 50px;
+  justify-content: center;
+  align-items: center;
 }
 
 .sidebar .photo {
@@ -46,6 +96,9 @@
 }
 
 .photo  {
+  /*  */
+  display: grid;
+  align-items: center;
 }
 
 .sidebar .side-content {
@@ -53,13 +106,24 @@
   color: black;
   font-size: 16px;
   font-weight: normal;
+  /*  */
+  display: grid;
+  justify-content: center;
+  align-items: center;
+
+
 }
 
 .nav {
   background-color: #FF7755;
+  /*  */
+  grid-column: 2 / -1;
 }
 
 .nav ul {
+  display: grid;
+  /*  */
+  grid-template-columns: repeat(3, 1fr);
 }
 
 .nav ul li {
@@ -69,6 +133,10 @@
 
 .article {
   background-color: #bccbde;
+  /*  */
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 15px;
 }
 
 .article p {
@@ -82,6 +150,8 @@
   background-color: #FFFFFF;
   color: black;
   text-align: center;
+  /*  */
+  height: 200px;
 }
 
 .card p {
@@ -97,9 +167,11 @@
 
 .footer {
   background-color: #393f4d;
+  /*  */
+  grid-column: 1 / -1;
 }
 
 .footer p {
   font-size: 13px;
-  font-weight: normal;  
+  font-weight: normal;
 }
